@@ -17,9 +17,15 @@
 package no.entur.kakka.geocoder.netex;
 
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBElement;
+import jakarta.xml.bind.Unmarshaller;
 import no.entur.kakka.domain.OSMPOIFilter;
 import no.entur.kakka.geocoder.featurejson.FeatureJSONFilter;
 import no.entur.kakka.geocoder.geojson.GeojsonFeatureWrapperFactory;
+import no.entur.kakka.geocoder.nabu.rest.AdministrativeZone;
 import no.entur.kakka.geocoder.netex.geojson.GeoJsonCollectionTopographicPlaceReader;
 import no.entur.kakka.geocoder.netex.geojson.GeoJsonSingleTopographicPlaceReader;
 import no.entur.kakka.geocoder.netex.pbf.PbfTopographicPlaceReader;
@@ -27,15 +33,17 @@ import no.entur.kakka.geocoder.netex.sosi.SosiTopographicPlaceReader;
 import no.entur.kakka.geocoder.sosi.SosiElementWrapperFactory;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.locationtech.jts.geom.CoordinateList;
+import org.locationtech.jts.geom.Geometry;
+import org.locationtech.jts.geom.MultiPolygon;
 import org.rutebanken.netex.model.IanaCountryTldEnumeration;
 import org.rutebanken.netex.model.PublicationDeliveryStructure;
 import org.rutebanken.netex.model.Site_VersionFrameStructure;
 import org.rutebanken.netex.validation.NeTExValidator;
 import org.springframework.util.CollectionUtils;
+import org.wololo.geojson.Polygon;
+import org.wololo.jts2geojson.GeoJSONWriter;
 
-import jakarta.xml.bind.JAXBContext;
-import jakarta.xml.bind.JAXBElement;
-import jakarta.xml.bind.Unmarshaller;
 import javax.xml.stream.XMLInputFactory;
 import javax.xml.stream.XMLStreamReader;
 import java.io.File;
@@ -61,6 +69,18 @@ public class TopographicPlaceConverterTest {
         validateNetexFile(targetPath);
     }
 
+    @Test
+    public void testCovertWOFCountriesToGeoJson() throws Exception {
+        final List<AdministrativeZone> wof = new GeoJsonSingleTopographicPlaceReader(new GeojsonFeatureWrapperFactory(null),
+                new File("src/test/resources/no/entur/kakka/geocoder/geojson/finland.geojson")).read()
+                .stream()
+                .map(tpa -> toAdministrativeZone(tpa, "WOF"))
+                .toList();
+
+        final ObjectMapper mapper = new ObjectMapper().enable(SerializationFeature.INDENT_OUTPUT);
+        mapper.writeValue(new File("target/finland-baba.geojson"), wof);
+        Assertions.assertFalse(CollectionUtils.isEmpty(wof));
+    }
 
     @Test
     public void testConvertPlaceOfInterestFromOsmPbf() throws Exception {
@@ -76,7 +96,7 @@ public class TopographicPlaceConverterTest {
 
     @Test
     public void testConvertAdminUnitsFromSosi() throws Exception {
-        TopographicPlaceReader reader = new SosiTopographicPlaceReader(new SosiElementWrapperFactory(), Arrays.asList(new File("src/test/resources/no/entur/kakka/geocoder/sosi/SosiTest.sos")));
+        TopographicPlaceReader reader = new SosiTopographicPlaceReader(new SosiElementWrapperFactory(), List.of(new File("src/test/resources/no/entur/kakka/geocoder/sosi/SosiTest.sos")));
         String targetPath = "target/admin-units-from-sosi.xml";
         converter.toNetexFile(reader,
                 targetPath);
@@ -96,15 +116,6 @@ public class TopographicPlaceConverterTest {
         validateNetexFile(targetPath);
     }
 
-//    @Test // File is to big for source control
-//    public void testConvertAdminUnitsFromSosiRealKartverketData() throws Exception {
-//        TopographicPlaceReader reader = new SosiTopographicPlaceReader(new File("files/ADM_enheter_Norge.sos"));
-//        String targetPath = "target/admin-units-from-sosi.xml";
-//        converter.toNetexFile(reader,
-//                targetPath);
-//
-//        validateNetexFile(targetPath);
-//    }
 
 
     private PublicationDeliveryStructure validateNetexFile(String path) throws Exception {
@@ -126,5 +137,31 @@ public class TopographicPlaceConverterTest {
 
     private OSMPOIFilter createFilter(String key, String value) {
         return OSMPOIFilter.fromKeyAndValue(key, value);
+    }
+
+    private AdministrativeZone toAdministrativeZone(TopographicPlaceAdapter topographicPlaceAdapter, String source) {
+
+        Geometry geometry = topographicPlaceAdapter.getDefaultGeometry();
+
+        if (geometry instanceof MultiPolygon) {
+            CoordinateList coordinateList = new CoordinateList(geometry.getBoundary().getCoordinates());
+            coordinateList.closeRing();
+            geometry = geometry.getFactory().createPolygon(coordinateList.toCoordinateArray());
+        }
+
+        Polygon geoJsonPolygon = (Polygon) new GeoJSONWriter().write(geometry);
+        return new AdministrativeZone("rb", topographicPlaceAdapter.getId(),
+                topographicPlaceAdapter.getName(), geoJsonPolygon, toType(topographicPlaceAdapter.getType()), source);
+
+    }
+
+    private AdministrativeZone.AdministrativeZoneType toType(TopographicPlaceAdapter.Type type) {
+        return switch (type) {
+            case COUNTRY -> AdministrativeZone.AdministrativeZoneType.COUNTRY;
+            case COUNTY -> AdministrativeZone.AdministrativeZoneType.COUNTY;
+            case LOCALITY -> AdministrativeZone.AdministrativeZoneType.LOCALITY;
+            default -> AdministrativeZone.AdministrativeZoneType.CUSTOM;
+        };
+
     }
 }
